# reliablerag

./: .env.example  .gitignore  README.md  SETUP.md  notebook0e9723b2f7.ipynb  pyproject.toml
delucion_dataset/: 01-basic-rag-capstone.ipynb
evaluation/: cuad_trials.md
notebooks/: 01_basic_rag.ipynb  02_cuad_rag.ipynb
references/02_Tools_Utilities/Code_snippets/: 01_Basic_RAG.ipynb  02_Document_RAG.ipynb
references/02_Tools_Utilities/Code_snippets/chroma_db/: chroma.sqlite3
src/reliablerag/: __init__.py  chain.py  embeddings.py  evaluation.py  retriever.py
